--- a/pages/vision-and-mission.html
+++ b/pages/vision-and-mission.html
@@ -8,16 +8,16 @@
   <meta name="author" content="Usheninte Dangana">
   <meta name="description" content="IPD-CRM | Institute of Personality Development & Customer Relationship Management. Customer Relationship Personified.">
   <!-- Stylesheet -->
-  <link rel="stylesheet" type="text/css" href="../css/styles.css" />
+  <link rel="stylesheet" type="text/css" href="./css/styles.css" />
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <title>IPD-CRM | Institute of Personality Development & Customer Relationship 
   Management</title>
 </head>
 <body>
-  
-  <!-- Navbar -->
 
+  <!-- Navbar -->
+  
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
     <a class="navbar-brand" href="#">IPD-CRM</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,6 +33,12 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="./vision-and-mission.html">Vision & Mission</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./membership.html">Membership</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./membership-types.html">Membership Types</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="./application.html">Application</a>
