--- a/index.html
+++ b/index.html
@@ -197,6 +197,22 @@
     </div>
   </div>
 
+  <!-- Button = LEARN MORE -->
+
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col title">
+        <a
+          href="./pages/corporate-profile.html"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <button type="button" class="btn btn-info">LEARN MORE</button>
+        </a>
+      </div>
+    </div>
+  </div>
+
   <!-- Footer -->
 
   <div id="footer_container"></div>
