--- a/pages/vision-and-mission.html
+++ b/pages/vision-and-mission.html
@@ -116,6 +116,22 @@
     </div>
   </div>
   
+  <!-- Button = LEARN MORE -->
+
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col title">
+        <a
+          href="./membership.html"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <button type="button" class="btn btn-info">LEARN MORE</button>
+        </a>
+      </div>
+    </div>
+  </div>
+
   <!-- Footer -->
 
   <div id="footer_container"></div>
