--- a/pages/membership.html
+++ b/pages/membership.html
@@ -89,7 +89,7 @@
       <div class="col col-lg-8">
         <p>As an institute that is inter-disciplinary in nature, membership is opened to individuals or persons in either public or private establishments, religious and political organisations, who desire to acquire winning personalities for profitable and mutually beneficial huma, coprporate/organisational and customer relationship.</p>
         <p>Membership of IPD-CRM, Nigeria is categorized with the following grades:</p>
-        <ol>
+        <ol type="i">
           <li>Associate Member</li>
           <li>Full Member</li>
           <li>Fellow</li>
