--- a/pages/membership-types.html
+++ b/pages/membership-types.html
@@ -47,6 +47,96 @@
     </div>
   </nav>
 
+  <!-- Content -->
+
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col">
+        <h2 class="title">Membership</h2>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="container-fluid block">
+    <div class="row justify-content-center">
+      <div class="col-lg"></div>
+      <div class="col col-lg-8">
+        <p></p>
+        <p></p>
+        <ol type="i">
+          <li></li>
+        </ol>
+      </div>
+      <div class="col-lg"></div>
+    </div>
+  </div>
+
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col">
+        <h2 class="title">Membership</h2>
+      </div>
+    </div>
+  </div>
+
+  <div class="container-fluid block">
+    <div class="row justify-content-center">
+      <div class="col-lg"></div>
+      <div class="col col-lg-8">
+        <p></p>
+        <p></p>
+        <ol type="i">
+          <li></li>
+        </ol>
+      </div>
+      <div class="col-lg"></div>
+    </div>
+  </div>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col">
+        <h2 class="title">Membership</h2>
+      </div>
+    </div>
+  </div>
+
+  <div class="container-fluid block">
+    <div class="row justify-content-center">
+      <div class="col-lg"></div>
+      <div class="col col-lg-8">
+        <p></p>
+        <p></p>
+        <ol type="i">
+          <li></li>
+        </ol>
+      </div>
+      <div class="col-lg"></div>
+    </div>
+  </div>
+  
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col">
+        <h2 class="title">Membership</h2>
+      </div>
+    </div>
+  </div>
+
+  <div class="container-fluid block">
+    <div class="row justify-content-center">
+      <div class="col-lg"></div>
+      <div class="col col-lg-8">
+        <p></p>
+        <p></p>
+        <ol type="i">
+          <li></li>
+        </ol>
+      </div>
+      <div class="col-lg"></div>
+    </div>
+  </div>
+  
   <!-- Footer -->
 
   <div id="footer_container"></div>
