--- a/pages/membership-types.html
+++ b/pages/membership-types.html
@@ -119,9 +119,9 @@
         <p>This is the highest grade of membership.</p>
         <p>To qualify for the Fellowship of the Institute, the person must fulfill the following:</p>
         <ol type="i">
-          <li></li>
-          <li></li>
-          <li></li>
+          <li>A graduate of Ten (10) years and above.</li>
+          <li>Must have spent five (5) years as a Full member of IPD-CRM.</li>
+          <li>Top Executives with experience: Chairman, MD, CEO / GM or Director with resposibility for managing Individuals or Corporate Relationshp at top management level.</li>
           <li></li>
           <li></li>
           <li></li>
